# ZPE-Diagram

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PUBLICATION_BOUNDARY_REPORT.md  README.md  REPRODUCIBILITY.md  SCOPE.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  evidence_dispute.md  feature_request.md  question.md
.github/workflows/: ci.yml  publish.yml
docs/: ARCHITECTURE.md  FAQ.md  LEGAL_BOUNDARIES.md  README.md  SUPPORT.md
docs/_reorientation/2026-04-17/: NOVELTY_CARD.md
proofs/artifacts/: reproduce_validation.py
proofs/manifests/: CURRENT_AUTHORITY_PACKET.md
src/zpe_diagram/: __init__.py  constants.py  encoder.py  pack.py  svg_io.py
tests/: test_style_authority.py
validation/results/: bounded_style_validation.json
