[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zpe-diagram"
version = "0.1.0"
license = "LicenseRef-Zer0pa-SAL-7.0"
description = "Bounded structural-with-style diagram encoding."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "svgpathtools>=1.7.2",
]
authors = [
  { name = "Zer0pa" },
]
keywords = ["diagram", "encoding", "svg", "style", "geometry"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
