[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zpe-diagram"
version = "0.1.0"
description = "Bounded structural-with-style diagram encoding."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "LicenseRef-Zer0pa-SAL-7.0" }
dependencies = [
  "svgpathtools>=1.7.2",
]
authors = [
  { name = "Zer0pa (Pty) Ltd", email = "architects@zer0pa.ai" },
]
keywords = ["diagram", "svg", "geometry", "stroke-order", "style-channel"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/Zer0pa/ZPE-Diagram"
Documentation = "https://github.com/Zer0pa/ZPE-Diagram/blob/main/docs/README.md"
Repository = "https://github.com/Zer0pa/ZPE-Diagram"
Issues = "https://github.com/Zer0pa/ZPE-Diagram/issues"
Changelog = "https://github.com/Zer0pa/ZPE-Diagram/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
